Checkpoint for ike-incubator components building.